ncurses (6.2+20201114-3) UNRELEASED; urgency=medium

  * Remove constraints unnecessary since stretch:
    + ncurses-term: Drop versioned constraint on suckless-tools in Replaces.
    + ncurses-term: Drop versioned constraint on suckless-tools in Breaks.
    + libtinfo5: Drop versioned constraint on dialog in Breaks.

 -- Debian Janitor <janitor@jelmer.uk>  Fri, 09 Jul 2021 16:54:25 -0000

ncurses (6.2+20201114-2) unstable; urgency=medium

  * New patch 02-fix-mlterm.diff, cherry-picked from the 20201205 upstream
    patchlevel.
    - Correct mlterm3 kf1-kf4 (Closes: #975322).
    - Add flash to mlterm3.
  * Refresh Debian patches.

 -- Sven Joachim <svenjoac@gmx.de>  Fri, 01 Jan 2021 16:02:10 +0100

ncurses (6.2+20201114-1) unstable; urgency=medium

  * New upstream patchlevel.
    - Add tmux-direct terminfo entry (Closes: #895754).
  * Add Breaks on cowdancer (<< 0.89~) to libncurses6 (Closes: #971672).
  * Upgrade Standards-Version to 4.5.1, no changes needed.

 -- Sven Joachim <svenjoac@gmx.de>  Thu, 19 Nov 2020 18:08:43 +0100

ncurses (6.2+20200918-1) unstable; urgency=medium

  * New upstream patchlevel.
    - Corrected condition for appending curses.events to the generated
      curses.h (report by Sven Joachim, Closes: #970577).
   * Version the Provides of the transitional -dev packages
     by libncurses-dev.

 -- Sven Joachim <svenjoac@gmx.de>  Sun, 20 Sep 2020 11:16:40 +0200

ncurses (6.2+20200912-1) unstable; urgency=medium

  [ Sven Joachim ]
  * New upstream patchlevel.
    - Move dlclose() call from lib_mouse.c to delscreen() to avoid a
      case in the former which could be called from SIGTSTP handler
      (Closes: #961097).
  * Update symbols files for new symbol _nc_tiparm.
  * Bump autoconf-dickey build dependency to (>= 2.52+20200111), as per
    configure.in.
  * Bump debhelper compatibility level to 13.
    - Use the substition feature in that compat level to get rid of the
      debian/*.{install,links}.in files.

  [ Debian Janitor ]