@@ -1,9 +1,14 @@
 ncurses (6.2+20201114-3) UNRELEASED; urgency=medium
 
+  [ Debian Janitor ]
   * Remove constraints unnecessary since stretch:
     + ncurses-term: Drop versioned constraint on suckless-tools in Replaces.
     + ncurses-term: Drop versioned constraint on suckless-tools in Breaks.
     + libtinfo5: Drop versioned constraint on dialog in Breaks.
+
+  [ Jordi Mallach ]
+  * Introduce a libncursesw6-udeb package, needed by newer nano versions
+    (Closes: #976275).
 
  -- Debian Janitor <janitor@jelmer.uk>  Fri, 09 Jul 2021 16:54:25 -0000
 
